--- a/SourceFEWSAdapter.Core/SourceFEWSAdapter.csproj
+++ b/SourceFEWSAdapter.Core/SourceFEWSAdapter.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
     <Reference Include="TIME">
-      <HintPath>C:\Program Files\eWater\Source 3.2.8.58\TIME.dll</HintPath>
+      <HintPath>..\..\..\References\TIME.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
