--- a/SourceFEWSAdapter.Core/app.config
+++ b/SourceFEWSAdapter.Core/app.config
@@ -1,14 +1,14 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
     <system.serviceModel>
         <bindings>
             <netTcpBinding>
                 <binding name="NetTcpBindingEndpoint" closeTimeout="00:01:00" openTimeout="00:01:00" receiveTimeout="00:10:00" sendTimeout="00:01:00" transactionFlow="false" transferMode="Buffered" transactionProtocol="OleTransactions" hostNameComparisonMode="StrongWildcard" listenBacklog="10" maxBufferPoolSize="524288" maxBufferSize="65536" maxConnections="10" maxReceivedMessageSize="65536">
-                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384"/>
-                    <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false"/>
+                    <readerQuotas maxDepth="32" maxStringContentLength="8192" maxArrayLength="16384" maxBytesPerRead="4096" maxNameTableCharCount="16384" />
+                    <reliableSession ordered="true" inactivityTimeout="00:10:00" enabled="false" />
                     <security mode="Transport">
-                        <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign"/>
-                        <message clientCredentialType="Windows"/>
+                        <transport clientCredentialType="Windows" protectionLevel="EncryptAndSign" />
+                        <message clientCredentialType="Windows" />
                     </security>
                 </binding>
             </netTcpBinding>
@@ -16,9 +16,22 @@
         <client>
             <endpoint address="net.tcp://localhost:8523/eWater/Services/RiverSystemService" binding="netTcpBinding" bindingConfiguration="NetTcpBindingEndpoint" contract="SourceService.IRiverSystemService" name="NetTcpBindingEndpoint">
                 <identity>
-                    <dns value="localhost"/>
+                    <dns value="localhost" />
                 </identity>
             </endpoint>
         </client>
     </system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8" /></startup>
+  <runtime>
+    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
+      <dependentAssembly>
+        <assemblyIdentity name="CsvHelper" publicKeyToken="8c4959082be5c823" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-31.0.0.0" newVersion="31.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Runtime.CompilerServices.Unsafe" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-4.0.4.1" newVersion="4.0.4.1" />
+      </dependentAssembly>
+    </assemblyBinding>
+  </runtime>
+</configuration>
