Reinstate CsvHelper, needed by IO libraries

--- a/SourceFEWSAdapter.Core/SourceFEWSAdapter.csproj
+++ b/SourceFEWSAdapter.Core/SourceFEWSAdapter.csproj
@@ -37,6 +37,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper">
+      <HintPath>..\packages\CsvHelper.31.0.2\lib\net48\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="eWater.Utilities.Math">
       <HintPath>..\References\eWater.Utilities.Math.dll</HintPath>
     </Reference>
